// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It can render body small text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-body-small-variant-basekick-6 typography-neutral-color-7 typography-regular-weight-8 typography-strong-support-9 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render body text critical tone 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-body-variant-basekick-36 typography-critical-color-37 typography-medium-weight-38 typography-strong-support-39 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render body text medium weight 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-body-variant-basekick-31 typography-neutral-color-32 typography-medium-weight-33 typography-strong-support-34 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render body text positive tone 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-body-variant-basekick-41 typography-positive-color-42 typography-medium-weight-43 typography-strong-support-44 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render body text truncated 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<div
  class="c0"
  style="width: 90px;"
>
  <span
    class="typography-body-variant-basekick-46 typography-neutral-color-47 typography-regular-weight-48 typography-strong-support-49 -span c1"
    data-id="text"
  >
    <div
      class="MuiBox-root MuiBox-root-52 typography-truncate-50"
    >
      Truncated text
    </div>
  </span>
</div>
`;

exports[`It can render subtitle caption text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-caption-variant-basekick-21 typography-neutral-color-22 typography-regular-weight-23 typography-strong-support-24 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render subtitle overline text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-overline-text-variant-basekick-26 typography-neutral-color-27 typography-regular-weight-28 typography-strong-support-29 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render subtitle small text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-subtitle-small-variant-basekick-16 typography-neutral-color-17 typography-regular-weight-18 typography-strong-support-19 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It can render subtitle text 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-subtitle-variant-basekick-11 typography-neutral-color-12 typography-regular-weight-13 typography-strong-support-14 -span c0"
  data-id="text"
>
  Body Text
</span>
`;

exports[`It should render a p tag by default 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-align: left;
}

<span
  class="typography-body-variant-basekick-1 typography-neutral-color-2 typography-regular-weight-3 typography-strong-support-4 -span c0"
  data-id="text"
>
  Body Text
</span>
`;
